Resolve Sonar Issues